--- a/content/data/account-aggregator/api-integration/notifications.mdx
+++ b/content/data/account-aggregator/api-integration/notifications.mdx
@@ -69,8 +69,7 @@ The FI notification payload contains two status
 -   `PENDING`- FI data session is active
 -   `COMPLETED`- All requested FIP(s) have status as `READY`
 -   `EXPIRED`- Data session had expired and no data fetch can happen for the dataSessionId
--   `PARTIAL` <RecentlyAdded content="Below is a summary of the API endpoints you need to implement on your server and expose to receive notifications from Setu AA. These notifications are webhooks from Setu based on the events that occur during the consent and data flow. The Financial Information (FI) notification is used to communicate the data session status you requested for, in Create Data Session API and the FI status of users’ linked FIPs. This is indicated using two status present in the FI notification payload." /> - Some FIPs are ready with the
-    data while a few others have failed. Ready data can still be fetched.
+-   `PARTIAL` - Some FIPs are ready with the data while a few others have failed. Ready data can still be fetched. <RecentlyAdded />
 -   `FAILED`- Data Session request failed, retry creating a new session
 
 **FIStatus** - return status of the FIP(s) linked to the data session
